# rust-astro

./: .gitignore  README.md  TODO.md
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile  policy.xml
backend/src/: main.rs
backend/src/handlers/: images.rs  mod.rs
backend/src/services/: compressor.rs  converter.rs  mod.rs
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/public/: manifest.json  robots.txt
frontend/src/components/: CategoryFilter.tsx  Header.tsx  MainContent.tsx  MobileMenu.tsx  ToolItem.astro
frontend/src/components/images/: ImageConvert.tsx
frontend/src/components/images/compress/: CompressedFileList.tsx  FileDropzone.tsx  ImageCompressor.tsx  ProgressBar.tsx  QualitySelector.tsx
frontend/src/components/images/convert/: ConvertedFileList.tsx  FileDropzone.tsx  FormatSelector.tsx  ImageConverter.tsx  ProgressBar.tsx
frontend/src/components/json/: JsonFormatter.tsx
frontend/src/components/password/: PasswordGenerator.tsx
frontend/src/components/todo/: TodoList.tsx
frontend/src/components/typing/: KeyboardDisplay.tsx  ResultModal.tsx  TextDisplay.tsx  TypingPractice.tsx
frontend/src/components/typing/data/: keyboard-layouts.ts  practice-texts.ts
frontend/src/components/ui/: alert.tsx  badge.tsx  select.tsx
frontend/src/data/: category.ts  tool.tsx
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  data-utils.ts
frontend/src/pages/: index.astro
frontend/src/pages/category/: [id].astro  [slug].astro
frontend/src/pages/imgs/: convert.astro
frontend/src/pages/tool/generate-password/: index.astro
frontend/src/pages/tool/image-compress/: index.astro
frontend/src/pages/tool/image-convert/: index.astro
frontend/src/pages/tool/json-format/: index.astro
frontend/src/stores/: categoryStore.ts  mobileMenuStore.ts
frontend/src/types/: compress.ts  convert.ts  seo.ts  typing.ts
(+2 files in other folders)
