[package]
name = "quicktoolify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# ウェブサーバー
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"] } # Serverを使用するために必要
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

# 画像処理
image = "0.24.7"

# ユーティリティ
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.21.7"

# マルチパートフォーム処理
multer = { version = "3.0.0", features = ["tokio-io"] }
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }