[package]
name = "quicktoolify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# ウェブサーバー
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"] } # Serverを使用するために必要
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
dotenv = "0.15.0"

# 画像処理
image = "0.24.7"
magick_rust = "1.0.0"  # ImageMagickのRustバインディング
# JPEG 圧縮を強化する `mozjpeg`
mozjpeg = "0.10.13"
ravif = "0.11"  # AVIF 圧縮用
rgb = "0.8"  # 必`ravif` の `encode_rgb()` で必要

# ユーティリティ
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
base64 = "0.21.7"

# マルチパートフォーム処理
multer = { version = "3.0.0", features = ["tokio-io"] }
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }
bytes = "1.10.0"

[build-dependencies]
bindgen = "0.69.5"
pkg-config = "0.3.31"